2004-04-10  Guntupalli Karunakar  <karunakar@freedomink.org>

        * configure.in: Added "gu" (Gujarati) to ALL_LINGUAS.

2004-03-31  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "af" to ALL_LINGUAS.

2004-03-22  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	- Version 2.6.0

	* po/*.po:
	- Stuff distcheck likes to do

2004-03-22  Guntupalli Karunakar  <karunakar@freedomink.org>

        * configure.in: Added "pa" (Punjabi) to ALL_LINGUAS.

2004-03-21  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	- Patch from Laszlo Peter for #134534, portable sed usage

2004-03-20  Gareth Owen  <gowen72@yahoo.com>

	* configure.in: Added en_GB to ALL_LINGUAS

2004-03-16  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	- Version 2.5.91

	* po/*.po:
	- Stuff distcheck likes to do

2004-03-15  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- Fix for #137216, infinite loop in tree traversal.

2004-03-10  Alexander Winston  <alexander.winston@comcast.net>

	* configure.in: Added en_CA to ALL_LINGUAS.

2004-03-09  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	- Version 2.5.90

	* po/*.po:
	- Various distcheck stuff

2004-03-07  Shaun McCance  <shaunm@gnome.org>

	* data/toc.xml.in:
	- Updated to reflect latest SK categories.

2004-03-03  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- Added me to the copyrights on About.


	* stylesheets/db2html-html.xsl:
	- Stylistic changes that should hopefully benefit documents with deeper
	  list nesting.  I've added margins on li elements, because it's really
	  needed.  Unfortunately, gtkhtml doesn't seem to understand that it
	  should also pad down the leading bullet/number.  We'll just have to
	  suffer it.

2004-03-03  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	- Require libxml2-2.6.5 and libxslt-1.1.4 for the dictionary stuff.

	* src/yelp-toc-pager.c:
	- Remove work-around for #131745, since we now require libxml2-2.6.5.
