@@ -1,3 +1,8 @@
+2004-04-16  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-toc-pager.c:
+	- Better handling of category_hash, as per #128914
+
 2004-04-10  Guntupalli Karunakar  <karunakar@freedomink.org>
 
         * configure.in: Added "gu" (Gujarati) to ALL_LINGUAS.
